--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- cdns -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Make It Rotate</title>
 </head>
+
 <body>
-    
+    <header>
+        <section></section>
+    </header>
+    <main>
+        <section class="">
+            <img class="flex mx-auto bg-[#b3f3f5]"
+                src="https://png.pngtree.com/png-vector/20220926/ourmid/pngtree-shiny-gold-star-clipart-illustration-design-png-image_6216956.png" alt="">
+        </section>
+        <section></section>
+    </main>
+    <footer>
+        <section></section>
+    </footer>
 </body>
+
 </html>
