--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@
         <section></section>
     </header>
     <main>
-        <section class="">
-            <img class="flex mx-auto bg-[#b3f3f5]"
-                src="https://png.pngtree.com/png-vector/20220926/ourmid/pngtree-shiny-gold-star-clipart-illustration-design-png-image_6216956.png" alt="">
+        <section class="bg-center bg-no-repeat bg-[red] p-10"
+            style="background-image: url('https://www.mathsisfun.com/geometry/images/degrees-360.svg');">
+            <img id="rotimg" class="flex mx-auto p-4 bg-[#f5deb348] rounded-xl"
+                src="https://png.pngtree.com/png-vector/20220926/ourmid/pngtree-shiny-gold-star-clipart-illustration-design-png-image_6216956.png"
+                alt="">
         </section>
-        <section></section>
+        <section>
+            <div class="flex mx-auto gap-20 justify-center mt-10">
+                <button class="btn btn-secondary">ROTATE BY 10&deg; </button>
+                <button class="btn btn-secondary">ROTATE BY 20&deg;</button>
+                <button class="btn btn-secondary">ROTATE BY 30&deg;</button>
+                <button class="btn btn-secondary">ROTATE BY 40&deg;</button>
+                <button class="btn btn-secondary">ROTATE BY 50&deg;</button>
+                <button class="btn btn-secondary">ROTATE BY 60</button>
+                <button class="btn btn-secondary">ROTATE BY 70</button>
+                <button class="btn btn-secondary">ROTATE BY 80</button>
+                <button class="btn btn-secondary">ROTATE BY 90</button>
+            </div>
+
+        </section>
     </main>
     <footer>
         <section></section>
